--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
 	madhephaestus/ESP32Servo@^0.9.0
 	blynkkk/Blynk@^1.0.1
 	knolleary/PubSubClient@^2.8.0
+	agdl/Base64@^1.0.0
 monitor_rts = 0
 monitor_dtr = 0
 monitor_speed = 115200
